<resources>
    <string name="app_name">噗铃Wi-Fi噗铃</string>

    <string name="tip_phone">手机号码:</string>
    <string name="authentication">验证码:</string>
    <string name="get_authentication_code">获取验证码</string>
    <string name="code_get_success">获取验证码成功</string>
    <string name="code_get_fail">获取验证码失败</string>
    <string name="code_check_success">验证成功</string>
    <string name="code_check_fail">验证失败</string>
    <string name="bind">绑定</string>
    <string name="action_settings">Settings</string>
    <string name="main_text">上海网关</string>
    <string name="main_text_tip">无线公共网络接入认证</string>
    <string name="submit_queren">确 认</string>
    <string name="china">中国</string>
    <string name="get_check_code">获取验证码</string>
    <string name="agree_user_permi">同意《最终用户协议》</string>
    <string name="title_activity_binded">BindedActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="user_permi">牛顿第一定律成立的参考系，称为惯性参考系，简称惯性系。\n反之，牛顿第一定律不成立的参考系，称为非惯性参考系，简称非惯性系。 对一切运动的描述，都是相对于某个参考系的。参考系选取的不同，对运动的描述，或者说运动方程的形式，也随之不同。人类从经验中发现，总可以找到这样的参考系
        ：其时间是均匀流逝的，空间是均匀和各向同性的；在这样的参考
        系内，描述运动的方程有着最简单的形式。这样的参考系就是惯
        性系。 一个参考系是不是惯性系，只能由试验确定。最基本的判
        据就是牛顿运动定律成立与否。根据伽利略相对性原理，和一个惯
        性系保持相对静止或相对匀速直线运动状态的参考系也是惯性系。在
        实践中，人们总是根据实际需要选取近似的惯性参考系。比如，在研
        究地面上物体小范围内的运动时，地球是一个很好的惯性系。在研究
        太阳系中天体的运动时，太阳是一个很好的惯性系。\n
    一个参考系是不是惯性系，只能由试验确定。最基本的判据就是牛顿运动定
        律成立与否。根据伽利略相对性原理，和一个惯性系保持相对静止或
        相对匀速直线运动状态的参考系也是惯性系。在实践中，人们总是根据
        实际需要选取近似的惯性参考系。比如，在研究地面上物体小范围内的
        运动时，地球是一个很好的惯性系。\n在研究太阳系中天体的运动时，太
        阳是一个很好的惯性系。
    </string>
    <string name="title_activity_conection">ConectionActivity</string>
    <string name="connection_tip">为了保证你能与本地网络无缝连接\n请在上网时保持应用开启</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_test_setting">TestSettingActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_ccccc">CCCCCActivity</string>
</resources>
