<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/connection_bg1"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <com.wiwide.customProg.ProgressBarCircularIndeterminate
            android:id="@+id/progress"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="#ccffffff"/>

        <TextView
            android:id="@+id/main_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"

            android:gravity="center"
            android:text="@string/main_text"
            android:textColor="@color/white_main"
            android:textSize="34sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_text"
            android:gravity="center"
            android:text="@string/main_text_tip"
            android:textColor="@color/white_meedium"
            android:textSize="16sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        >

        <TextView
            android:id="@+id/tv_select_country"
            android:layout_width="50dp"
            android:layout_height="36dp"
            android:layout_above="@+id/line_1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/china"
            android:textColor="@color/white_meedium"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_above="@+id/line_1"
            android:layout_toRightOf="@+id/tv_select_country"
            android:background="@color/clean"
            android:hint="请输入手机号码"
            android:inputType="number"
            android:maxLength="12"
            android:paddingLeft="4dp"
            android:singleLine="true"
            android:textColor="@color/white_meedium"
            android:textColorHint="@color/white_extra_light"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/layout_check"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="2dp"
            android:background="@color/white_meedium"/>

        <RelativeLayout
            android:id="@+id/layout_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/line_2"
            >

            <EditText
                android:id="@+id/edt_check_code"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_toLeftOf="@+id/btn_get_check_code"
                android:background="@color/clean"
                android:hint="输入验证码"
                android:inputType="number"
                android:maxLength="5"
                android:paddingLeft="4dp"
                android:singleLine="true"
                android:textColor="@color/white_meedium"
                android:textColorHint="@color/white_extra_light"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btn_get_check_code"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_btn_get_check"
                android:text="@string/get_check_code"
                android:textColor="@color/white_meedium"
                android:textSize="14sp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/line_2"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_above="@+id/btn_submit"
            android:layout_marginBottom="20dp"
            android:background="@color/white_meedium"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="120dp"
            android:background="@drawable/selector_btn_submit"
            android:text="@string/submit_queren"
            android:textColor="@color/main_bg"
            android:textSize="16sp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="76dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbox_agree_permi"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

            <TextView
                android:id="@+id/user_permi"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/agree_user_permi"
                android:textColor="@color/white_meedium"
                android:textSize="14sp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
